apps/media-server/bazarr/bazarr-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: bazarr
  ports:
    - protocol: TCP
      port: 6767
      targetPort: 6767
